<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appDescriptionChose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_decription_chose"
        android:text="@string/app_decription_chose"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/computerChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_img_computer_choice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescriptionChose"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/padrao" />

    <ImageView
        android:id="@+id/imgRock"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="@string/description_img_rock"
        android:onClick="choseRock"
        android:tag="rock"
        app:layout_constraintBottom_toBottomOf="@+id/imgPaper"
        app:layout_constraintEnd_toStartOf="@+id/imgPaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgPaper"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pedra" />

    <ImageView
        android:id="@+id/imgScissors"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_img_scissor"
        android:onClick="choseScissor"
        android:tag="scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgPaper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tesoura" />

    <ImageView
        android:id="@+id/imgPaper"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_img_paper"
        android:onClick="chosePaper"
        android:tag="paper"
        app:layout_constraintBottom_toBottomOf="@+id/imgScissors"
        app:layout_constraintEnd_toStartOf="@+id/imgScissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgRock"
        app:layout_constraintTop_toTopOf="@+id/imgScissors"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/papel" />

    <TextView
        android:id="@+id/resultDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/result_escription"
        android:text="@string/result_escription"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imgPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerChoice" />

</androidx.constraintlayout.widget.ConstraintLayout>